--- a/book.html
+++ b/book.html
@@ -105,31 +105,31 @@
         <div id="mybook" style="display:none;">
             <div class="b-load">
                 <div>
-                    <img src="images/img1.jpg" alt=""/>
+                    <img src="images/1.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img2.jpg" alt=""/>
+                    <img src="images/2.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img3.jpg" alt=""/>
+                    <img src="images/3.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img4.jpg" alt=""/>
+                    <img src="images/4.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img5.jpg" alt=""/>
+                    <img src="images/5.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img6.jpg" alt=""/>
+                    <img src="images/6.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img7.jpg" alt=""/>
+                    <img src="images/7.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/img8.jpg" alt=""/>
+                    <img src="images/8.png" alt=""/>
                 </div>
 				<div>
-					<img src="images/img1.jpg" alt="">
+					<img src="images/9.png" alt="">
 				</div>
             </div>
         </div>
@@ -155,7 +155,7 @@
                         $mybook.show().booklet({
                             width: 800,
                             height: 500,
-                            speed: 600,
+                            speed: 900,
                             direction: 'LTR',
                             next: $bttn_next,
                             prev: $bttn_prev,
