--- a/Hare krishna.html
+++ b/Hare krishna.html
@@ -1,5 +1,5 @@
 <div class="button-grid">
-    <a href="indexs.html" class="grid-button">Home</a>
+    <a href="./indexs.html" class="grid-button">Home</a>
     <style>
         .button-grid {
             display: flex;
