--- a/indexs.html
+++ b/indexs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/iskcon-fevicon.png" type="image/gif" />
+    <link rel="icon" href="assets/images/iskcon-fevicon.png" type="image/gif" />
     <title>Deepostava</title>
     <style>
         /* Logout button styles */
@@ -81,7 +81,7 @@
     <!-- /Button grid -->
 
     <!-- Imports -->
-    <script type="module" src="js/indexs.js"></script>
+    <script type="module" src="assets/js/indexs.js"></script>
     <script>
         function logout() {
             window.location.href = './index.html';
