--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="images/iskcon-fevicon.png" type="image/gif" />
+    <link rel="icon" href="assets/images/iskcon-fevicon.png" type="image/gif" />
     <title>Login | ISKCON Deepostava</title>
   </head>
 
@@ -250,7 +250,7 @@
       });
     </script>
 
-    <script type="module" src="js/firebaseauth.js"></script>
+    <script type="module" src="assets/js/firebaseauth.js"></script>
     <!--/Script for SignUp/login -->
 
     <!--disable this page 
