--- a/Gheeoffering.html
+++ b/Gheeoffering.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/iskcon-fevicon.png" type="image/gif" />
+    <link rel="icon" href="assets/images/iskcon-fevicon.png" type="image/gif" />
     <title>Ghee Offering</title>
 </head>
 <body>
     <!-- Upload Image section -->
     <div class="button-grid">
-        <a href="indexs.html" class="grid-button">Home</a>
+        <a href="./indexs.html" class="grid-button">Home</a>
         <style>
             .button-grid {
                 display: flex;
@@ -43,7 +43,7 @@
 <div class="UploadImage">
     <h1>Upload Image</h1>
     <div id="dropZone">
-        <img src="images/image.png" alt="Upload Icon" />
+        <img src="assets/images/image.png" alt="Upload Icon" />
         <p>Drag and Drop to Upload Image <br/> OR  <br/><span class="clickToUpload">Click to upload</span> </p>
     </div>
     <input type="file" id="fileInput" accept="image/*" style="display: none;" multiple />
@@ -168,7 +168,7 @@
 
 
   <!--imports-->
-  <script type="module" src="js/indexs.js"></script>
+  <script type="module" src="assets/js/indexs.js"></script>
 
   <!--disable this page 
 <script>
