--- a/book.html
+++ b/book.html
@@ -5,9 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700i" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-    <script src="booklet/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="booklet/jquery.booklet.1.1.0.min.js" type="text/javascript"></script>
-    <link href="booklet/jquery.booklet.1.1.0.css" type="text/css" rel="stylesheet" media="screen" />
+    <script src="assets/booklet/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="assets/booklet/jquery.booklet.1.1.0.min.js" type="text/javascript"></script>
+    <link href="assets/booklet/jquery.booklet.1.1.0.css" type="text/css" rel="stylesheet" media="screen" />
 
     <style>
         * {
@@ -34,7 +34,7 @@
             width: 905px;
             height: 540px;
             position: relative;
-            background: transparent url(images/bg.png) no-repeat 9px 27px;
+            background: transparent url(assets/images/bg.png) no-repeat 9px 27px;
         }
         .booklet img {
             width: 100%;
@@ -50,7 +50,7 @@
             cursor: pointer;
             margin-top: -20px;
             top: 50%;
-            background: transparent url(images/buttons.png) no-repeat 0px -40px;
+            background: transparent url(assets/images/buttons.png) no-repeat 0px -40px;
         }
         a#prev_page_button {
             left: -30px;
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="button-grid">
-        <a href="indexs.html" class="grid-button">Home</a>
+        <a href="./indexs.html" class="grid-button">Home</a>
         <style>
             .button-grid {
                 display: flex;
@@ -105,31 +105,31 @@
         <div id="mybook" style="display:none;">
             <div class="b-load">
                 <div>
-                    <img src="images/1.png" alt=""/>
+                    <img src="assets/images/1.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/2.png" alt=""/>
+                    <img src="assets/images/2.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/3.png" alt=""/>
+                    <img src="assets/images/3.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/4.png" alt=""/>
+                    <img src="assets/images/4.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/5.png" alt=""/>
+                    <img src="assets/images/5.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/6.png" alt=""/>
+                    <img src="assets/images/6.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/7.png" alt=""/>
+                    <img src="assets/images/7.png" alt=""/>
                 </div>
                 <div>
-                    <img src="images/8.png" alt=""/>
+                    <img src="assets/images/8.png" alt=""/>
                 </div>
 				<div>
-					<img src="images/9.png" alt="">
+					<img src="assets/images/9.png" alt="">
 				</div>
             </div>
         </div>
