--- a/Hare krishna.html
+++ b/Hare krishna.html
@@ -263,3 +263,10 @@ loadMusic(songs[musicIndex]);
 
     </div>
 </div>
+
+<!--disable this page 
+<script>
+  document.addEventListener('contextmenu', (event) => {
+      event.preventDefault();
+  });
+</script> -->
