--- a/book.html
+++ b/book.html
@@ -167,3 +167,9 @@
     </script>
 </body>
 </html>
+<!--disable this page 
+<script>
+  document.addEventListener('contextmenu', (event) => {
+      event.preventDefault();
+  });
+</script> -->
