--- a/indexs.html
+++ b/indexs.html
@@ -89,3 +89,9 @@
     </script>
 </body>
 </html>
+<!--disable this page 
+<script>
+  document.addEventListener('contextmenu', (event) => {
+      event.preventDefault();
+  });
+</script> -->
