--- a/indexs.html
+++ b/indexs.html
@@ -250,7 +250,7 @@
         <img src="https://via.placeholder.com/560x436" alt="Image 4">
         <div class="overlay">
             <h3 style="font-family: 'Roboto', sans-serif;"> Daily Activities</h3>
-            <button class="info-button" onclick="window.location.href='page4.html'">Participate</button>
+            <button class="info-button" onclick="window.location.href='dailyactivity.html'">Participate</button>
         </div>
     </div>
 </div>
