--- a/Mantra.html
+++ b/Mantra.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Day #30 - Music Player | AsmrProg</title>
+    <link rel="icon" href="assets/images/iskcon-fevicon.png" type="image/gif"/>
+    <title>Hare Krishna Maha Mantra</title>
 </head>
 
 <body>
@@ -208,7 +209,7 @@ const songs = [
         path: 'assets/1.mp3',
         displayName: 'Hare Krishna Maha Mantra',
         cover: 'assets/1.jpg',
-        artist: 'Srila Phrabhu',
+        artist: 'Srila Prabhupada',
     },
 ];
 
