--- a/book.html
+++ b/book.html
@@ -144,31 +144,34 @@
         <div id="mybook" style="display:none;">
             <div class="b-load">
                 <div>
-                    <img src="assets/images/1.png" alt=""/>
+                    <img src="assets/images/img1.jpg" alt=""/>
                 </div>
                 <div>
                     <img src="assets/images/2.png" alt=""/>
                 </div>
                 <div>
-                    <img src="assets/images/3.png" alt=""/>
+                    <img src="assets/images/img3.jpg" alt=""/>
                 </div>
                 <div>
                     <img src="assets/images/4.png" alt=""/>
                 </div>
                 <div>
-                    <img src="assets/images/5.png" alt=""/>
+                    <img src="assets/images/img5.jpg" alt=""/>
                 </div>
                 <div>
                     <img src="assets/images/6.png" alt=""/>
                 </div>
                 <div>
-                    <img src="assets/images/7.png" alt=""/>
+                    <img src="assets/images/img6.jpg" alt=""/>
                 </div>
                 <div>
                     <img src="assets/images/8.png" alt=""/>
                 </div>
                 <div>
-                    <img src="assets/images/9.png" alt="">
+                    <img src="assets/images/img2.jpg" alt="">
+                </div>
+                <div>
+                    <img src="assets/images/5.png" alt="">
                 </div>
             </div>
         </div>
