--- a/Gheeoffering.html
+++ b/Gheeoffering.html
@@ -52,7 +52,7 @@
         <div id="progressBar" style="width: 0%; height: 20px; background-color: blue; transition: width 0.5s;"></div>
         <div id="progressText" style="text-align: center; margin-top: 5px; font-weight: bold;">0%</div>
     </div>
-    <div id="imageGrid"></div>
+    <!-- <div id="imageGrid"></div> -->
 </div>
 
 
@@ -170,7 +170,9 @@
 
 
   <!--imports-->
-  <script type="module" src="assets/js/indexs.js"></script>
+  <script type="module" src="./assets/js/indexs.js"></script>
+
+  
 
   <!--disable this page 
 <script>
